uno-backend - add of player info with name